[gd_scene load_steps=3 format=3 uid="uid://2hlq2avf4bdp"]

[ext_resource type="Script" uid="uid://c6uik2xbuqy34" path="res://scripts/main_menu.gd" id="1_l6cm7"]
[ext_resource type="Theme" uid="uid://j26afsvcjrxl" path="res://resources/christmas_ui_theme.tres" id="2_ekxnf"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l6cm7")

[node name="MenuBG" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(0, 250)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 150
theme_override_constants/margin_bottom = 100

[node name="Title" type="RichTextLabel" parent="MarginContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 60
bbcode_enabled = true
text = "[wave]A Wintry Confession[/wave]"
horizontal_alignment = 1

[node name="MenuContainer" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/separation = 10

[node name="PlayButton" type="Button" parent="MarginContainer/MenuContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme = ExtResource("2_ekxnf")
theme_override_font_sizes/font_size = 28
text = "Play"

[node name="OptionButton" type="Button" parent="MarginContainer/MenuContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme = ExtResource("2_ekxnf")
theme_override_font_sizes/font_size = 28
text = "Option"

[node name="QuitButton" type="Button" parent="MarginContainer/MenuContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme = ExtResource("2_ekxnf")
theme_override_font_sizes/font_size = 28
text = "Quit"

[connection signal="pressed" from="MarginContainer/MenuContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MarginContainer/MenuContainer/OptionButton" to="." method="_on_option_button_pressed"]
[connection signal="pressed" from="MarginContainer/MenuContainer/QuitButton" to="." method="_on_quit_button_pressed"]
